grammar/YWParser.cpp

// Generated from YW.g4 by ANTLR 4.7


#include "YWListener.h"

#include "YWParser.h"


using namespace antlrcpp;
using namespace antlr4;

YWParser::YWParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

YWParser::~YWParser() {
  delete _interpreter;
}

std::string YWParser::getGrammarFileName() const {
  return "YW.g4";
}

const std::vector<std::string>& YWParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& YWParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ScriptContext ------------------------------------------------------------------

YWParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<YWParser::CodeBlockContext *> YWParser::ScriptContext::codeBlock() {
  return getRuleContexts<YWParser::CodeBlockContext>();
}

YWParser::CodeBlockContext* YWParser::ScriptContext::codeBlock(size_t i) {
  return getRuleContext<YWParser::CodeBlockContext>(i);
}


size_t YWParser::ScriptContext::getRuleIndex() const {
  return YWParser::RuleScript;
}

void YWParser::ScriptContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript(this);
}

void YWParser::ScriptContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript(this);
}

YWParser::ScriptContext* YWParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, YWParser::RuleScript);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(62);
      codeBlock();
      setState(65); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == YWParser::T__1

    || _la == YWParser::EOL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeBlockContext ------------------------------------------------------------------

YWParser::CodeBlockContext::CodeBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::BeginContext* YWParser::CodeBlockContext::begin() {
  return getRuleContext<YWParser::BeginContext>(0);
}

YWParser::EndContext* YWParser::CodeBlockContext::end() {
  return getRuleContext<YWParser::EndContext>(0);
}

std::vector<tree::TerminalNode *> YWParser::CodeBlockContext::EOL() {
  return getTokens(YWParser::EOL);
}

tree::TerminalNode* YWParser::CodeBlockContext::EOL(size_t i) {
  return getToken(YWParser::EOL, i);
}

std::vector<YWParser::CodeBlockContext *> YWParser::CodeBlockContext::codeBlock() {
  return getRuleContexts<YWParser::CodeBlockContext>();
}

YWParser::CodeBlockContext* YWParser::CodeBlockContext::codeBlock(size_t i) {
  return getRuleContext<YWParser::CodeBlockContext>(i);
}

std::vector<YWParser::BlockAnnotationContext *> YWParser::CodeBlockContext::blockAnnotation() {
  return getRuleContexts<YWParser::BlockAnnotationContext>();
}

YWParser::BlockAnnotationContext* YWParser::CodeBlockContext::blockAnnotation(size_t i) {
  return getRuleContext<YWParser::BlockAnnotationContext>(i);
}


size_t YWParser::CodeBlockContext::getRuleIndex() const {
  return YWParser::RuleCodeBlock;
}

void YWParser::CodeBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCodeBlock(this);
}

void YWParser::CodeBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCodeBlock(this);
}

YWParser::CodeBlockContext* YWParser::codeBlock() {
  CodeBlockContext *_localctx = _tracker.createInstance<CodeBlockContext>(_ctx, getState());
  enterRule(_localctx, 2, YWParser::RuleCodeBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YWParser::EOL) {
      setState(67);
      match(YWParser::EOL);
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(73);
    begin();
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(74);
        match(YWParser::EOL); 
      }
      setState(79);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(84);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << YWParser::T__1)
      | (1ULL << YWParser::T__2)
      | (1ULL << YWParser::T__5)
      | (1ULL << YWParser::T__6)
      | (1ULL << YWParser::T__7)
      | (1ULL << YWParser::T__8)
      | (1ULL << YWParser::EOL))) != 0)) {
      setState(82);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case YWParser::T__1:
        case YWParser::EOL: {
          setState(80);
          codeBlock();
          break;
        }

        case YWParser::T__2:
        case YWParser::T__5:
        case YWParser::T__6:
        case YWParser::T__7:
        case YWParser::T__8: {
          setState(81);
          blockAnnotation();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(86);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(87);
    end();
    setState(91);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(88);
        match(YWParser::EOL); 
      }
      setState(93);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockAnnotationContext ------------------------------------------------------------------

YWParser::BlockAnnotationContext::BlockAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::InputPortContext* YWParser::BlockAnnotationContext::inputPort() {
  return getRuleContext<YWParser::InputPortContext>(0);
}

YWParser::OutputPortContext* YWParser::BlockAnnotationContext::outputPort() {
  return getRuleContext<YWParser::OutputPortContext>(0);
}

YWParser::CallContext* YWParser::BlockAnnotationContext::call() {
  return getRuleContext<YWParser::CallContext>(0);
}

std::vector<tree::TerminalNode *> YWParser::BlockAnnotationContext::EOL() {
  return getTokens(YWParser::EOL);
}

tree::TerminalNode* YWParser::BlockAnnotationContext::EOL(size_t i) {
  return getToken(YWParser::EOL, i);
}


size_t YWParser::BlockAnnotationContext::getRuleIndex() const {
  return YWParser::RuleBlockAnnotation;
}

void YWParser::BlockAnnotationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockAnnotation(this);
}

void YWParser::BlockAnnotationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockAnnotation(this);
}

YWParser::BlockAnnotationContext* YWParser::blockAnnotation() {
  BlockAnnotationContext *_localctx = _tracker.createInstance<BlockAnnotationContext>(_ctx, getState());
  enterRule(_localctx, 4, YWParser::RuleBlockAnnotation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YWParser::T__5:
      case YWParser::T__7: {
        setState(94);
        inputPort();
        break;
      }

      case YWParser::T__6:
      case YWParser::T__8: {
        setState(95);
        outputPort();
        break;
      }

      case YWParser::T__2: {
        setState(96);
        call();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(102);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(99);
        match(YWParser::EOL); 
      }
      setState(104);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputPortContext ------------------------------------------------------------------

YWParser::InputPortContext::InputPortContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::InContext* YWParser::InputPortContext::in() {
  return getRuleContext<YWParser::InContext>(0);
}

YWParser::ParamContext* YWParser::InputPortContext::param() {
  return getRuleContext<YWParser::ParamContext>(0);
}

std::vector<tree::TerminalNode *> YWParser::InputPortContext::EOL() {
  return getTokens(YWParser::EOL);
}

tree::TerminalNode* YWParser::InputPortContext::EOL(size_t i) {
  return getToken(YWParser::EOL, i);
}

std::vector<YWParser::PortAnnotationContext *> YWParser::InputPortContext::portAnnotation() {
  return getRuleContexts<YWParser::PortAnnotationContext>();
}

YWParser::PortAnnotationContext* YWParser::InputPortContext::portAnnotation(size_t i) {
  return getRuleContext<YWParser::PortAnnotationContext>(i);
}


size_t YWParser::InputPortContext::getRuleIndex() const {
  return YWParser::RuleInputPort;
}

void YWParser::InputPortContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInputPort(this);
}

void YWParser::InputPortContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInputPort(this);
}

YWParser::InputPortContext* YWParser::inputPort() {
  InputPortContext *_localctx = _tracker.createInstance<InputPortContext>(_ctx, getState());
  enterRule(_localctx, 6, YWParser::RuleInputPort);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YWParser::T__5: {
        setState(105);
        in();
        break;
      }

      case YWParser::T__7: {
        setState(106);
        param();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(112);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(109);
        match(YWParser::EOL); 
      }
      setState(114);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
    setState(118);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YWParser::T__0

    || _la == YWParser::T__9) {
      setState(115);
      portAnnotation();
      setState(120);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputPortContext ------------------------------------------------------------------

YWParser::OutputPortContext::OutputPortContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::OutContext* YWParser::OutputPortContext::out() {
  return getRuleContext<YWParser::OutContext>(0);
}

YWParser::RetContext* YWParser::OutputPortContext::ret() {
  return getRuleContext<YWParser::RetContext>(0);
}

std::vector<tree::TerminalNode *> YWParser::OutputPortContext::EOL() {
  return getTokens(YWParser::EOL);
}

tree::TerminalNode* YWParser::OutputPortContext::EOL(size_t i) {
  return getToken(YWParser::EOL, i);
}

std::vector<YWParser::PortAnnotationContext *> YWParser::OutputPortContext::portAnnotation() {
  return getRuleContexts<YWParser::PortAnnotationContext>();
}

YWParser::PortAnnotationContext* YWParser::OutputPortContext::portAnnotation(size_t i) {
  return getRuleContext<YWParser::PortAnnotationContext>(i);
}


size_t YWParser::OutputPortContext::getRuleIndex() const {
  return YWParser::RuleOutputPort;
}

void YWParser::OutputPortContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOutputPort(this);
}

void YWParser::OutputPortContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOutputPort(this);
}

YWParser::OutputPortContext* YWParser::outputPort() {
  OutputPortContext *_localctx = _tracker.createInstance<OutputPortContext>(_ctx, getState());
  enterRule(_localctx, 8, YWParser::RuleOutputPort);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YWParser::T__6: {
        setState(121);
        out();
        break;
      }

      case YWParser::T__8: {
        setState(122);
        ret();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(128);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(125);
        match(YWParser::EOL); 
      }
      setState(130);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx);
    }
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == YWParser::T__0

    || _la == YWParser::T__9) {
      setState(131);
      portAnnotation();
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PortAnnotationContext ------------------------------------------------------------------

YWParser::PortAnnotationContext::PortAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::AsContext* YWParser::PortAnnotationContext::as() {
  return getRuleContext<YWParser::AsContext>(0);
}

YWParser::UriContext* YWParser::PortAnnotationContext::uri() {
  return getRuleContext<YWParser::UriContext>(0);
}

std::vector<tree::TerminalNode *> YWParser::PortAnnotationContext::EOL() {
  return getTokens(YWParser::EOL);
}

tree::TerminalNode* YWParser::PortAnnotationContext::EOL(size_t i) {
  return getToken(YWParser::EOL, i);
}


size_t YWParser::PortAnnotationContext::getRuleIndex() const {
  return YWParser::RulePortAnnotation;
}

void YWParser::PortAnnotationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPortAnnotation(this);
}

void YWParser::PortAnnotationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPortAnnotation(this);
}

YWParser::PortAnnotationContext* YWParser::portAnnotation() {
  PortAnnotationContext *_localctx = _tracker.createInstance<PortAnnotationContext>(_ctx, getState());
  enterRule(_localctx, 10, YWParser::RulePortAnnotation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(139);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case YWParser::T__0: {
        setState(137);
        as();
        break;
      }

      case YWParser::T__9: {
        setState(138);
        uri();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(144);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(141);
        match(YWParser::EOL); 
      }
      setState(146);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AsContext ------------------------------------------------------------------

YWParser::AsContext::AsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::AsKeywordContext* YWParser::AsContext::asKeyword() {
  return getRuleContext<YWParser::AsKeywordContext>(0);
}

YWParser::AliasContext* YWParser::AsContext::alias() {
  return getRuleContext<YWParser::AliasContext>(0);
}


size_t YWParser::AsContext::getRuleIndex() const {
  return YWParser::RuleAs;
}

void YWParser::AsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAs(this);
}

void YWParser::AsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAs(this);
}

YWParser::AsContext* YWParser::as() {
  AsContext *_localctx = _tracker.createInstance<AsContext>(_ctx, getState());
  enterRule(_localctx, 12, YWParser::RuleAs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    asKeyword();
    setState(148);
    alias();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BeginContext ------------------------------------------------------------------

YWParser::BeginContext::BeginContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::BeginKeywordContext* YWParser::BeginContext::beginKeyword() {
  return getRuleContext<YWParser::BeginKeywordContext>(0);
}

YWParser::BlockNameContext* YWParser::BeginContext::blockName() {
  return getRuleContext<YWParser::BlockNameContext>(0);
}


size_t YWParser::BeginContext::getRuleIndex() const {
  return YWParser::RuleBegin;
}

void YWParser::BeginContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBegin(this);
}

void YWParser::BeginContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBegin(this);
}

YWParser::BeginContext* YWParser::begin() {
  BeginContext *_localctx = _tracker.createInstance<BeginContext>(_ctx, getState());
  enterRule(_localctx, 14, YWParser::RuleBegin);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    beginKeyword();
    setState(151);
    blockName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallContext ------------------------------------------------------------------

YWParser::CallContext::CallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::CallKeywordContext* YWParser::CallContext::callKeyword() {
  return getRuleContext<YWParser::CallKeywordContext>(0);
}

YWParser::BlockNameContext* YWParser::CallContext::blockName() {
  return getRuleContext<YWParser::BlockNameContext>(0);
}


size_t YWParser::CallContext::getRuleIndex() const {
  return YWParser::RuleCall;
}

void YWParser::CallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCall(this);
}

void YWParser::CallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCall(this);
}

YWParser::CallContext* YWParser::call() {
  CallContext *_localctx = _tracker.createInstance<CallContext>(_ctx, getState());
  enterRule(_localctx, 16, YWParser::RuleCall);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    callKeyword();
    setState(154);
    blockName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EndContext ------------------------------------------------------------------

YWParser::EndContext::EndContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::EndKeywordContext* YWParser::EndContext::endKeyword() {
  return getRuleContext<YWParser::EndKeywordContext>(0);
}

YWParser::BlockNameContext* YWParser::EndContext::blockName() {
  return getRuleContext<YWParser::BlockNameContext>(0);
}


size_t YWParser::EndContext::getRuleIndex() const {
  return YWParser::RuleEnd;
}

void YWParser::EndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnd(this);
}

void YWParser::EndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnd(this);
}

YWParser::EndContext* YWParser::end() {
  EndContext *_localctx = _tracker.createInstance<EndContext>(_ctx, getState());
  enterRule(_localctx, 18, YWParser::RuleEnd);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    endKeyword();
    setState(157);
    blockName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FileContext ------------------------------------------------------------------

YWParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::FileKeywordContext* YWParser::FileContext::fileKeyword() {
  return getRuleContext<YWParser::FileKeywordContext>(0);
}

tree::TerminalNode* YWParser::FileContext::PATH_TEMPLATE() {
  return getToken(YWParser::PATH_TEMPLATE, 0);
}


size_t YWParser::FileContext::getRuleIndex() const {
  return YWParser::RuleFile;
}

void YWParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void YWParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

YWParser::FileContext* YWParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 20, YWParser::RuleFile);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    fileKeyword();
    setState(160);
    match(YWParser::PATH_TEMPLATE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InContext ------------------------------------------------------------------

YWParser::InContext::InContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::InKeywordContext* YWParser::InContext::inKeyword() {
  return getRuleContext<YWParser::InKeywordContext>(0);
}

YWParser::VariableNameContext* YWParser::InContext::variableName() {
  return getRuleContext<YWParser::VariableNameContext>(0);
}


size_t YWParser::InContext::getRuleIndex() const {
  return YWParser::RuleIn;
}

void YWParser::InContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIn(this);
}

void YWParser::InContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIn(this);
}

YWParser::InContext* YWParser::in() {
  InContext *_localctx = _tracker.createInstance<InContext>(_ctx, getState());
  enterRule(_localctx, 22, YWParser::RuleIn);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    inKeyword();
    setState(163);
    variableName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutContext ------------------------------------------------------------------

YWParser::OutContext::OutContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::OutKeywordContext* YWParser::OutContext::outKeyword() {
  return getRuleContext<YWParser::OutKeywordContext>(0);
}

YWParser::VariableNameContext* YWParser::OutContext::variableName() {
  return getRuleContext<YWParser::VariableNameContext>(0);
}


size_t YWParser::OutContext::getRuleIndex() const {
  return YWParser::RuleOut;
}

void YWParser::OutContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOut(this);
}

void YWParser::OutContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOut(this);
}

YWParser::OutContext* YWParser::out() {
  OutContext *_localctx = _tracker.createInstance<OutContext>(_ctx, getState());
  enterRule(_localctx, 24, YWParser::RuleOut);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(165);
    outKeyword();
    setState(166);
    variableName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

YWParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::ParamKeywordContext* YWParser::ParamContext::paramKeyword() {
  return getRuleContext<YWParser::ParamKeywordContext>(0);
}

YWParser::VariableNameContext* YWParser::ParamContext::variableName() {
  return getRuleContext<YWParser::VariableNameContext>(0);
}


size_t YWParser::ParamContext::getRuleIndex() const {
  return YWParser::RuleParam;
}

void YWParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void YWParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

YWParser::ParamContext* YWParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 26, YWParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    paramKeyword();
    setState(169);
    variableName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetContext ------------------------------------------------------------------

YWParser::RetContext::RetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

YWParser::ReturnKeywordContext* YWParser::RetContext::returnKeyword() {
  return getRuleContext<YWParser::ReturnKeywordContext>(0);
}

YWParser::VariableNameContext* YWParser::RetContext::variableName() {
  return getRuleContext<YWParser::VariableNameContext>(0);
}


size_t YWParser::RetContext::getRuleIndex() const {
  return YWParser::RuleRet;
}

void YWParser::RetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<YWListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRet(this);
}
